--- a/templates/warehousing/access/login.html
+++ b/templates/warehousing/access/login.html
@@ -26,7 +26,9 @@
 <body class="hold-transition login-page bg-white">
     <div class="login-box">
         <div class="login-logo">
-            <a href="#">HoMIES<br><b>Warehousing</b></a>
+            <a href="#">HoMIES<br>
+                <!-- <b>Warehousing</b> -->
+            </a>
         </div>
         <!-- /.login-logo -->
         <div class="card shadow-none">
@@ -64,12 +66,12 @@
                         </div>
                         <div class="invalid-feedback">
                             Please enter a password.
-                          </div>
+                        </div>
                     </div>
                     <div class="row">
                         <!-- /.col -->
                         <div class="col-12">
-                            <button type="submit" class="btn btn-primary btn-block">Sign In</button>
+                            <button type="submit" class="btn btn-primary btn-block">Login <i class= "fas fa-sign-in-alt"></i></button>
                         </div>
                         <!-- /.col -->
                     </div>
