--- a/templates/warehousing/admin/content/request.html
+++ b/templates/warehousing/admin/content/request.html
@@ -58,6 +58,13 @@
     <section class="content">
         <div class="container-fluid">
             <div class="row">
+                <button class="btn btn-success mr-2 ml-2" onclick="loadTable()">All Requestor</button>
+                <button class="btn btn-warning mr-2" onclick="loadTableFilterToProcurement()">Procurement</button>
+                <button class="btn btn-info mr-2" onclick="loadTableFilterToHD()">Hospital Department</button>
+                <button class="btn btn-secondary mr-2" onclick="loadTableFilterToWarehouse()">Warehouse</button>
+            </div>
+            <br>
+            <div class="row">
                 <div class="col-md-12">
                     <!-- Card -->
                     <div class="card card-primary card-outline">
@@ -69,7 +76,7 @@
                                 </div>
                                 <!-- Button -->
                                 <div class="col-md-6">
-                                    <button class="btn btn-sm btn-primary float-right" data-toggle="modal" data-target="#adding_modal">Add New Request <i class="fas fa-plus"></i></button>
+                                    <button class="btn btn-sm btn-primary float-right" data-toggle="modal" data-target="#adding_modal" onClick="return addData()">Add New Request <i class="fas fa-plus"></i></button>
                                     <!-- <input type="submit" value="Create new Project" class="btn btn-success float-right"> -->
                                 </div>
                                 <!-- / Button -->
@@ -229,7 +236,7 @@
                             <!-- BUTTONS -->
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                <button type="Submit" class="btn btn-primary" id="button_save">Save</button>
+                                <button type="Submit" class="btn btn-primary" id="button_save">Save Changes</button>
                             </div>
                             <!-- END BUTTONS -->
                         </div>
