--- a/templates/warehousing/staff/content/request.html
+++ b/templates/warehousing/staff/content/request.html
@@ -59,6 +59,13 @@
     <section class="content">
         <div class="container-fluid">
             <div class="row">
+                <button class="btn btn-success mr-2 ml-2" onclick="loadTable()">All Requestor</button>
+                <button class="btn btn-warning mr-2" onclick="loadTableFilterToProcurement()">Procurement</button>
+                <button class="btn btn-info mr-2" onclick="loadTableFilterToHD()">Hospital Department</button>
+                <button class="btn btn-secondary mr-2" onclick="loadTableFilterToWarehouse()">Warehouse</button>
+            </div>
+            <br>
+            <div class="row">
                 <div class="col-md-12">
                     <!-- Card -->
                     <div class="card card-primary card-outline">
