--- a/templates/warehousing/staff/default/base.html
+++ b/templates/warehousing/staff/default/base.html
@@ -66,6 +66,11 @@
   color: red;
   margin-left:2px
 }
+.select2-container {
+    width: 100% !important;
+    padding: 0;
+    
+}
 </style>
 
 </head>
@@ -96,6 +101,14 @@
                 <li class="nav-item">
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button">
                         <i class="fas fa-bars"></i>
+                    </a>
+                </li>
+
+                 <!-- Home -->
+                 <li class="nav-item">
+                    <a class="nav-link text-primary" href="./index.html" role="button">
+                        <i class="fas fa-home"></i>
+                        <span class="d-inline-block d-md-none ml-1 ml-md-0">Home</span>
                     </a>
                 </li>
         
