--- a/templates/warehousing/admin/content/dashboard.html
+++ b/templates/warehousing/admin/content/dashboard.html
@@ -15,11 +15,11 @@
                 </div>
     
                 <!-- Breadcrumb -->
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item active">Home</li>            
                     </ol>
-                </div>
+                </div> -->
                 <!-- / breadcrumb -->
             </div>
         </div><!-- /.container-fluid -->
