--- a/templates/warehousing/admin/content/hospital_departments.html
+++ b/templates/warehousing/admin/content/hospital_departments.html
@@ -149,7 +149,7 @@
                             <!-- BUTTONS -->
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                <button type="Submit" class="btn btn-primary" id="button_add">Add</button>
+                                <button type="Submit" class="btn btn-primary" id="button_add">Submit</button>
                             </div>
                             <!-- END BUTTONS -->
                         </div>
@@ -206,7 +206,7 @@
                             <!-- BUTTONS -->
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                <button type="Submit" class="btn btn-primary" id="button_save">Save</button>
+                                <button type="Submit" class="btn btn-primary" id="button_save">Save Changes</button>
                             </div>
                             <!-- END BUTTONS -->
                         </div>
