--- a/templates/warehousing/admin/content/inventories.html
+++ b/templates/warehousing/admin/content/inventories.html
@@ -144,7 +144,7 @@
                             <!-- BUTTONS -->
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                <button type="submit" class="btn btn-primary" id="button_add">Add</button>
+                                <button type="submit" class="btn btn-primary" id="button_add">Submit</button>
                             </div>
                             <!-- END BUTTONS -->
                         </div>
@@ -197,7 +197,7 @@
                             <!-- BUTTONS -->
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                <button type="submit" class="btn btn-primary" id="button_save">Save</button>
+                                <button type="submit" class="btn btn-primary" id="button_save">Save Changes</button>
                             </div>
                             <!-- END BUTTONS -->
                         </div>
