--- a/templates/warehousing/admin/content/viewOutboundReport.html
+++ b/templates/warehousing/admin/content/viewOutboundReport.html
@@ -115,9 +115,9 @@
                                 <div class="col">
                                     <h3 class="card-title">Supplies</h3>
                                 </div>
-                                <!-- <div class="col" id="add_supply_id">
-                                    <button class="btn btn-primary float-right" data-toggle="modal" data-target="#adding_modal" onclick="return addSupply()">Add Supply Request</button>
-                                </div> -->
+                                <div class="col" id="add_supply_id">
+                                    <button class="btn btn-primary float-right" data-toggle="modal" data-target="#adding_modal">Add Supply Request <i class= "fas fa-plus ml-1"></i></button>
+                                </div>
                             </div>
                         </div>
                         <!-- /.card-header -->
@@ -183,7 +183,7 @@
                             <!-- BUTTONS -->
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                <button type="Submit" class="btn btn-primary" id="button_add">Add</button>
+                                <button type="Submit" class="btn btn-primary" id="button_add">Submit</button>
                             </div>
                             <!-- END BUTTONS -->
                         </div>
@@ -263,7 +263,7 @@
                                 <!-- BUTTONS -->
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                    <button type="Submit" class="btn btn-primary" id="button_save">Save</button>
+                                    <button type="Submit" class="btn btn-primary" id="button_save">Save Changes</button>
                                 </div>
                                 <!-- END BUTTONS -->
                             </div>
