--- a/templates/warehousing/admin/content/viewRequest.html
+++ b/templates/warehousing/admin/content/viewRequest.html
@@ -148,7 +148,7 @@
                             <!-- BUTTONS -->
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                <button type="Submit" class="btn btn-primary" id="button_add">Add</button>
+                                <button type="Submit" class="btn btn-primary" id="button_add">Submit</button>
                             </div>
                             <!-- END BUTTONS -->
                         </div>
@@ -212,7 +212,7 @@
                             <!-- BUTTONS -->
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                <button type="Submit" class="btn btn-primary" id="button_save">Save</button>
+                                <button type="Submit" class="btn btn-primary" id="button_save">Save Changes</button>
                             </div>
                             <!-- END BUTTONS -->
                         </div>
