--- a/templates/warehousing/manager/content/inventories.html
+++ b/templates/warehousing/manager/content/inventories.html
@@ -145,7 +145,7 @@
                             <!-- BUTTONS -->
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                <button type="submit" class="btn btn-primary" id="button_add">Add</button>
+                                <button type="submit" class="btn btn-primary" id="button_add">Submit</button>
                             </div>
                             <!-- END BUTTONS -->
                         </div>
