--- a/templates/warehousing/manager/content/viewReturn.html
+++ b/templates/warehousing/manager/content/viewReturn.html
@@ -1,5 +1,5 @@
 <!-- Apply layout from base.html -->
-{%extends 'warehousing/staff/default/base.html'%} 
+{%extends 'warehousing/admin/default/base.html'%} 
 
 <!-- Enter content for block 'content' -->
 {%block content%}
@@ -9,17 +9,17 @@
             <div class="row mb-2">
                 <!-- Title -->
                 <div class="col-sm-6">
-                    <h1>Request Detail</h1>
+                    <h1>Return Detail</h1>
                     <p class="text-muted">This is subheading</p>
                 </div>
 
                 <!-- Breadcrumb -->
                 <!-- <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
-                        <li class="breadcrumb-item " id ="dashboard_nav"><a href="/warehousing/staff/dashboard">Home </a></li>
+                        <li class="breadcrumb-item " id ="dashboard_nav"><a href="/warehousing/admin/dashboard">Home </a></li>
                         <li>&nbsp; / &nbsp;</li>
-                        <script>if(window.location.pathname == '/warehousing/staff/dashboard/'){document.getElementById("dashboard_nav").classList.add('active')}</script>
-                        <li class="breadcrumb-item" id ="supplies_nav"><a href="/warehousing/staff/request">Request</a></li>                    
+                        <script>if(window.location.pathname == '/warehousing/admin/dashboard/'){document.getElementById("dashboard_nav").classList.add('active')}</script>
+                        <li class="breadcrumb-item" id ="supplies_nav"><a href="/warehousing/admin/request">Request</a></li>                    
                     </ol>
                 </div> -->
                 <!-- / breadcrumb -->
@@ -38,11 +38,11 @@
                         <!-- Card Header -->
                         <div class="card-header">
                             <div class="row">
-                                <div class="col-md-7">
+                                <div class="col-md-9">
                                     <div class="h5" id="card_header_id">
                                     </div>
                                 </div>
-                                <div class="col-md-5" id="send_request_id">
+                                <div class="col-md-3" id="send_return_id">
                                     
                                 </div>
                             </div>
@@ -78,10 +78,10 @@
                         <div class="card-header">
                             <div class="row">
                                 <div class="col">
-                                    <h3 class="card-title">Requested Supplies</h3>
+                                    <h3 class="card-title">Supplies</h3>
                                 </div>
                                 <div class="col" id="add_supply_id">
-                                    <!-- <button class="btn btn-primary float-right" data-toggle="modal" data-target="#adding_modal" onclick="return addSupply()">Add Supply Request</button> -->
+                                    
                                 </div>
                             </div>
                         </div>
@@ -132,7 +132,7 @@
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label for="supply_id">Supply</label>
-                                        <select class="form-control" id="supply_id" name="supply_id">
+                                        <select class="form-control js-example-basic-single" id="supply_id" name="supply_id">
                                         </select>
                                     </div>
                                 </div>
@@ -148,7 +148,7 @@
                             <!-- BUTTONS -->
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                <button type="Submit" class="btn btn-primary" id="button_add">Add</button>
+                                <button type="Submit" class="btn btn-primary" id="button_add">Submit</button>
                             </div>
                             <!-- END BUTTONS -->
                         </div>
@@ -178,7 +178,7 @@
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label for="e_requestor">Requestor</label>
-                                        <select class="form-control" id="e_requestor" name="e_requestor">
+                                        <select class="form-control js-example-basic-single" id="e_requestor" name="e_requestor">
                                             <option value="Warehouse">Warehouse</option>
                                             <option value="Procurement">Procurement</option>
                                             <option value="Hospital Department">Hospital Department</option>
@@ -190,7 +190,7 @@
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label for="e_request_type">Request type</label>
-                                        <select class="form-control" id="e_request_type" name="e_request_type">
+                                        <select class="form-control js-example-basic-single" id="e_request_type" name="e_request_type">
                                             <option value="For Request">For Request</option>
                                             <option value="To Request">To Request</option>
                                         </select>
@@ -201,9 +201,68 @@
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label for="e_request_status" id="e_request_statusLabel">Request Status</label>
-                                        <select class="form-control" id="e_request_status" name="e_request_status">
+                                        <select class="form-control js-example-basic-single" id="e_request_status" name="e_request_status">
                                             <option value="Pending">Pending</option>
                                             <option value="For Delivery">For Delivery</option>
+                                            <option value="Delivered">Delivered</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- BUTTONS -->
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="Submit" class="btn btn-primary" id="button_save">Save Changes</button>
+                            </div>
+                            <!-- END BUTTONS -->
+                        </div>
+                    </form> <!-- END CONTENT -->
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+    </div>
+    <!-- END editing Request Modal -->
+
+    <!-- editing Supply Request Modal -->
+    <div class="modal fade" id="editing_supply_modal">
+        <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Add Supply Form</h4>
+                    <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <!-- CONTENT -->
+                    <form id="e_supply_form_id" name="e_supply_form_id" enctype="multipart/form_data">
+                        <div class="card-body">
+                            <input type="hidden" id="e_uuid" name="e_uuid" value="">
+                            <input type="hidden" id="e_req_id" name="e_req_id" value="">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="e_supply_id">Supply</label>
+                                        <select class="form-control js-example-basic-single" id="e_supply_id" name="e_supply_id" disabled>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="e_quantity" id="e_quantityLabel">Quantity</label>
+                                        <input type="number" class="form-control" id="e_quantity" placeholder="Enter Quantity" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="e_status" id="e_statusLabel">Status</label>
+                                        <select class="form-control js-example-basic-single" id="e_status" name="e_status">
+                                            <option value="Approved">Approved</option>
+                                            <option value="Pending">Pending</option>
                                         </select>
                                     </div>
                                 </div>
@@ -220,14 +279,14 @@
             </div><!-- /.modal-dialog -->
         </div><!-- /.modal -->
     </div>
-    <!-- END editing Request Modal -->
+    <!-- END editing Supply Request Modal -->
 {%endblock%}
 
 {%block scripts%}
     <script> 
-        var request_id = _GET('request_id') 
+        var return_id = _GET('return_id') 
 
-        console.log(request_id);
+        console.log(return_id);
     </script>
-    <script src="{{url_for('static', path='/dist/js/warehousing/admin/viewRequest.js')}}"></script>
+    <script src="{{url_for('static', path='/dist/js/warehousing/admin/viewReturn.js')}}"></script>
 {%endblock%}
