--- a/templates/warehousing/manager/default/base.html
+++ b/templates/warehousing/manager/default/base.html
@@ -69,6 +69,12 @@
   color: red;
   margin-left:2px
 }
+
+.select2-container {
+    width: 100% !important;
+    padding: 0;
+    
+}
 </style>
 
 </head>
@@ -99,6 +105,14 @@
                 <li class="nav-item">
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button">
                         <i class="fas fa-bars"></i>
+                    </a>
+                </li>
+
+                 <!-- Home -->
+                 <li class="nav-item">
+                    <a class="nav-link text-primary" href="./index.html" role="button">
+                        <i class="fas fa-home"></i>
+                        <span class="d-inline-block d-md-none ml-1 ml-md-0">Home</span>
                     </a>
                 </li>
         
@@ -430,11 +444,11 @@
                     <!-- CONTENT -->
                     <form id="e_form_id" name="e_form_id" enctype="multipart/form_data">
                         <div class="card-body">
-                            Are you sure you want to Logout?
+                            Are you sure you want to Log out?
                             <!-- BUTTONS -->
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                                <button type="Submit" class="btn btn-danger" id="button_logout" onClick="return logout()">Logout<i class= "fas fa-sign-out-alt"></i></button>
+                                <button type="Submit" class="btn btn-danger" id="button_logout" onClick="return logout()">Log out<i class= "fas fa-sign-out-alt"></i></button>
                             </div>
                             <!-- END BUTTONS -->
                         </div>
